--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,9 +3,9 @@
 # set application environment [development-testing-staging-production]
 SetEnv AULA_APP_ENV 	"development"
 # set physical application path '/var/www/htmll/www.mutashabih.local/'
-SetEnv AULA_APP_PATH 	"D:\wamp\www\www.mutashabih.clean\\"
+SetEnv AULA_APP_PATH 	"/var/www/html/www.aulaula.local/"
 # set domain name 'mutashabih.local'
-SetEnv AULA_APP_DOMAIN 	"mutashabih.clean"
+SetEnv AULA_APP_DOMAIN 	"aulaula.local"
 
 # define default re-write rules
 RewriteEngine On
