push modified codes

--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -30,7 +30,7 @@ directories.log = AULA_APP_PATH "var/log/"
 directories.tmp = AULA_APP_PATH "var/tmp/"
 directories.disk = AULA_APP_PATH "public/data/"
 ;;;;;;;directories.cache = AULA_APP_PATH "var/cache/"
-directories.cache = AULA_APP_PATH "data/j2Oz0lq6/"
+directories.cache = AULA_APP_PATH "public/data/j2Oz0lq6/"
 directories.locale = AULA_APP_PATH "app/locale/"
 directories.frontend_theme = AULA_APP_PATH "app/theme/frontend/"
 directories.frontend_default_theme = AULA_APP_PATH "app/theme/frontend/default/"
@@ -68,9 +68,9 @@ urls.backend_default_skin_js = "http://www." AULA_APP_DOMAIN "/skin/backend/defa
 urls.backend_default_skin_images = "http://www." AULA_APP_DOMAIN "/skin/backend/default/default/images/"
 
 ;application cache configuration
-cache.photo_list.disk = AULA_APP_PATH "data/j2Oz0lq6/photo_list.txt"
+cache.photo_list.disk = AULA_APP_PATH "public/data/j2Oz0lq6/photo_list.txt"
 cache.media_list.disk = AULA_APP_PATH "disk/j2Oz0lq6/media_list.txt"
-cache.video_list.disk = AULA_APP_PATH "data/j2Oz0lq6/video_list.txt"
+cache.video_list.disk = AULA_APP_PATH "public/data/j2Oz0lq6/video_list.txt"
 cache.photo_list.url = "http://www." AULA_APP_DOMAIN "/data/j2Oz0lq6/photo_list.txt"
 cache.media_list.url = "http://www." AULA_APP_DOMAIN "/data/j2Oz0lq6/media_list.txt"
 cache.video_list.url = "http://www." AULA_APP_DOMAIN "/data/j2Oz0lq6/video_list.txt"
