--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -393,6 +393,6 @@ database.adapter = "pdo_mysql"
 database.params.host = "localhost"
 database.params.name = "aulaula"
 database.params.user = "root"
-database.params.pass = "root"
+database.params.pass = ""
 database.params.port = "334"
 database.params.profiler = "0"
