--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -396,3 +396,6 @@ database.params.user = "root"
 database.params.pass = ""
 database.params.port = "334"
 database.params.profiler = "0"
+
+[anas : development]
+database.params.pass = "root"
