Upload Vehicle for sale functionality

--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -307,6 +307,7 @@ encryption.date._2021._12 = "adlfkp02"
 locale.multi_language_support = "0"
 locale.default.lang = "ar_jo"
 locale.default.current.short = "ar_jo"
+locale.default.current.id = 1
 locale.default.title = "عربي"
 locale.default.charset = "UTF-8"
 locale.available.lang._1.short = "en_us"
