--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -399,4 +399,4 @@ database.params.port = "334"
 database.params.profiler = "0"
 
 [anas : development]
-database.params.pass = "root"
+database.params.pass = ""
